# QCL

./: README.md  configlang.cabal
app/: Main.hs
examples/: Main.hs
src/: QCL.hs
