cabal-version:      2.4
name:               configlang
version:            0.1.0.0

synopsis: An implementation of a dynamically-typed config language.

license:            NONE
author:             Zhouyu Qian
maintainer:         qzy@qzy.io

library
    exposed-modules:  QCL

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, Earley ^>= 0.13.0.1, text ^>= 1.2.5.0, containers ^>= 0.6.4.1, transformers ^>= 0.5.6.2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable configlang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        configlang

    hs-source-dirs:   app
    default-language: Haskell2010
