cabal-version:      2.4
name:               configlang
version:            0.1.0.0

synopsis: An implementation of a dynamically-typed config language.

license:            NONE
author:             Zhouyu Qian
maintainer:         qzy@qzy.io

library
    exposed-modules:  QCL

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19, Earley ^>= 0.13.0.1, text ^>= 2.1, containers ^>= 0.6, transformers ^>= 0.6, aeson ^>= 2.2, scientific ^>= 0.3, vector ^>= 0.13, bytestring ^>= 0.12
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable configlang
    main-is:          Main.hs

    build-depends:
        base ^>=4.19,
        configlang,
        aeson ^>= 2.2,
        text ^>= 2.1,
        bytestring ^>= 0.12

    hs-source-dirs:   app
    default-language: Haskell2010

executable configlang-examples
    main-is:          Main.hs

    build-depends:
        base ^>=4.19,
        configlang,
        aeson ^>= 2.2,
        text ^>= 2.1,
        bytestring ^>= 0.12

    hs-source-dirs:   examples
    default-language: Haskell2010
